force-app/main/default/objects/Eztap_Integration__mdt/Eztap_Integration__mdt.object-meta.xml
<CustomObject>
    <label>Eztap Integration</label>
    <pluralLabel>Eztap Integration</pluralLabel>
</CustomObject>