force-app/main/default/objects/Eztap_Integration__mdt/fields/App_Key__c.field-meta.xml
<CustomField>
    <fullName>App_Key__c</fullName>
    <label>App Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>