force-app/main/default/objects/Eztap_Integration__mdt/fields/ExternalRefNumber__c.field-meta.xml
<CustomField>
    <fullName>ExternalRefNumber__c</fullName>
    <label>ExternalRefNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>