force-app/main/default/objects/Eztap_Integration__mdt/fields/PaymentMode__c.field-meta.xml
<CustomField>
    <fullName>PaymentMode__c</fullName>
    <label>PaymentMode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>